--- a/force-app/main/default/lwc/vdt_workspace/vdt_workspace.html
+++ b/force-app/main/default/lwc/vdt_workspace/vdt_workspace.html
@@ -18,5 +18,8 @@
         <template if:true={showSettings}>
             settings
         </template>
+        <template if:true={showTerritory}>
+            <c-vdt_territory-analysis></c-vdt_territory-analysis>
+        </template>
     </div>
 </template>
