adding options to metric picklist

--- a/force-app/main/default/lwc/vdt_territoryAnalysisTree/vdt_territoryAnalysisTree.html
+++ b/force-app/main/default/lwc/vdt_territoryAnalysisTree/vdt_territoryAnalysisTree.html
@@ -14,9 +14,9 @@
                     </lightning-layout-item>
                     <lightning-layout-item size="2" class="filter-component">
                         <c-vdt_autocomplete-input
-                            placeholder="Select Specialty"
-                            options={specialtyOptions}
-                            onoptionselect={handleSpecialtyOptionSelect}
+                            placeholder="Select Metric to Filter"
+                            options={metricOptions}
+                            onoptionselect={handleMetricOptionSelect}
                         ></c-vdt_autocomplete-input>
                     </lightning-layout-item>
                     <lightning-layout-item size="2" class="filter-component">
