--- a/force-app/main/default/lwc/vdt_workspace/vdt_workspace.html
+++ b/force-app/main/default/lwc/vdt_workspace/vdt_workspace.html
@@ -21,5 +21,8 @@
         <template if:true={showTerritory}>
             <c-vdt_territory-analysis></c-vdt_territory-analysis>
         </template>
+        <template if:true={showFielLevelSecurity}>
+            <c-vdt_field-level-security-analysis></c-vdt_field-level-security-analysis>
+        </template>
     </div>
 </template>
