--- a/force-app/main/default/lwc/vdt_territoryAnalysis/vdt_territoryAnalysis.html
+++ b/force-app/main/default/lwc/vdt_territoryAnalysis/vdt_territoryAnalysis.html
@@ -41,7 +41,7 @@
                 <c-vdt_calculation-monitoring></c-vdt_calculation-monitoring>
             </lightning-tab>
             <lightning-tab label="Logs">
-                <c-vdt_onekey-logs></c-vdt_onekey-logs>
+                <c-vdt_territory-logs></c-vdt_territory-logs>
             </lightning-tab>
         </lightning-tabset>
     </div>
