--- a/force-app/main/default/lwc/vdt_territoryAnalysisFilter/vdt_territoryAnalysisFilter.html
+++ b/force-app/main/default/lwc/vdt_territoryAnalysisFilter/vdt_territoryAnalysisFilter.html
@@ -4,7 +4,13 @@
             <lightning-layout-item size="12">
                 <lightning-layout>
                     <lightning-layout-item size="4">
-                        <c-vdt_onekey-country-input class="validate" disabled={disabled} oncountrychange={handleCountryOptionSelect}></c-vdt_onekey-country-input>
+                        <c-vdt_onekey-country-input disabled={disabled} oncountrychange={handleCountryOptionSelect}></c-vdt_onekey-country-input>
+                    </lightning-layout-item>
+                    <lightning-layout-item size="1" class="label">
+                        OR
+                    </lightning-layout-item>
+                    <lightning-layout-item size="7" class="search-component">
+                        <c-vdt_tree-combobox tree-data={items} onselected={handleSelectTerritory}></c-vdt_tree-combobox>
                     </lightning-layout-item>
                 </lightning-layout>
             </lightning-layout-item>
