adding latest version from dev

--- a/force-app/main/default/lwc/vdt_territoryAnalysisTree/vdt_territoryAnalysisTree.html
+++ b/force-app/main/default/lwc/vdt_territoryAnalysisTree/vdt_territoryAnalysisTree.html
@@ -70,7 +70,7 @@
                 </lightning-layout>
             </lightning-layout-item>
             <lightning-layout-item>
-                <lightning-tree items={treeItems} header="Territories" onselect={handleOnTerritoryselect} selected-item={selectedItem}></lightning-tree>
+                <!-- <lightning-tree items={treeItems} header="Territories" onselect={handleOnTerritoryselect} selected-item={selectedItem}></lightning-tree> -->
             </lightning-layout-item>
             <lightning-layout-item size="12" class="graphs">
                 <lightning-datatable
