filter component for FSL

--- a/force-app/main/default/lwc/vdt_permissionsMetadataAnalysis/vdt_permissionsMetadataAnalysis.html
+++ b/force-app/main/default/lwc/vdt_permissionsMetadataAnalysis/vdt_permissionsMetadataAnalysis.html
@@ -20,7 +20,7 @@
                 <c-vdt_calculation-monitoring></c-vdt_calculation-monitoring>
             </lightning-tab>
             <lightning-tab label="Logs">
-                <!-- <c-vdt_onekey-logs></c-vdt_onekey-logs> -->
+                <c-vdt_permissions-metadata-logs></c-vdt_permissions-metadata-logs>
             </lightning-tab>
         </lightning-tabset>
     </div>
