countries to product adoption

--- a/force-app/main/default/lwc/vdt_productsAndHierarchy/vdt_productsAndHierarchy.html
+++ b/force-app/main/default/lwc/vdt_productsAndHierarchy/vdt_productsAndHierarchy.html
@@ -16,7 +16,7 @@
                 <c-vdt_product-adoption-tree></c-vdt_product-adoption-tree>
             </div>
             <div class="slds-m-top_medium">
-                <c-vdt_product-adoption-analysis international-country={internationalCountry.data}></c-vdt_product-adoption-analysis>
+                <c-vdt_product-adoption-analysis countries={_countries} international-country={internationalCountry.data}></c-vdt_product-adoption-analysis>
             </div>
         </lightning-tab>
         <lightning-tab label="Monitoring">
