--- a/force-app/main/default/lwc/vdt_workspace/vdt_workspace.html
+++ b/force-app/main/default/lwc/vdt_workspace/vdt_workspace.html
@@ -24,5 +24,8 @@
         <template if:true={showFielLevelSecurity}>
             <c-vdt_permissions-metadata-analysis></c-vdt_permissions-metadata-analysis>
         </template>
+        <template if:true={showVaultDocuments}>
+            <c-vdt_vault-documents></c-vdt_vault-documents>
+        </template>
     </div>
 </template>
