adding section to vault component and minor fixes

--- a/force-app/main/default/lwc/vdt_workspace/vdt_workspace.html
+++ b/force-app/main/default/lwc/vdt_workspace/vdt_workspace.html
@@ -25,7 +25,7 @@
             <c-vdt_permissions-metadata-analysis></c-vdt_permissions-metadata-analysis>
         </template>
         <template if:true={showVaultDocuments}>
-            <c-vdt_vault-documents></c-vdt_vault-documents>
+            <c-vdt_vault></c-vdt_vault>
         </template>
     </div>
 </template>
